# quant_rd_tool

./: .env.example  .gitignore  README.md  pyproject.toml
data/: settings.json
data/crypto/: alert_state.json  options_spread_alert_log.jsonl  options_spread_alert_state.json  perp_state_BTC.json  schedule_alert_log.jsonl  schedules.json
docs/: schedule-alert-custom-rules.md
tests/: test_akshare_stocks.py  test_alpha158_demo.py  test_backtest.py  test_ccxt_connectivity.py  test_cli_crypto_perp_bot.py  test_cli_crypto_perp_portfolio.py  test_crypto.py  test_crypto_bot_routes.py  test_crypto_bot_scheduler.py  test_crypto_carry_arbitrage.py  test_crypto_carry_routes.py  test_crypto_hft.py  test_crypto_hft_common.py  test_crypto_hft_execution.py  test_crypto_hft_market_signals.py  test_crypto_hft_risk.py  test_crypto_hft_routes.py  test_crypto_hft_strategies.py  test_crypto_market_radar.py  test_crypto_market_radar_routes.py  test_crypto_ml.py  test_crypto_news_advisor.py  test_crypto_news_feeds.py  test_crypto_news_pipeline.py  test_crypto_news_routes.py  test_crypto_news_scoring.py  test_crypto_news_search.py  test_crypto_news_search_usage.py  test_crypto_news_storage.py  test_crypto_ops.py  test_crypto_ops_control.py  test_crypto_options_aligned_compare.py  test_crypto_options_backtest.py  test_crypto_options_data_cache.py  test_crypto_options_deribit.py  test_crypto_options_greeks.py  test_crypto_options_portfolio_greeks.py  test_crypto_options_portfolio_greeks_history.py  test_crypto_options_spread_alerts.py  test_crypto_options_spread_history.py  (+124 more)
(+848 files in other folders)
